fixed spacings

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -17,7 +17,7 @@
     @apply font-outfit font-thin sm:text-7xl mb-8;
   }
   h3 {
-    @apply text-xl mt-10
+    @apply text-xl
   }
 
   hr {
